fixed favourite coin labels on small screens

--- a/src/conteiners/Favorites/Favorites.css
+++ b/src/conteiners/Favorites/Favorites.css
@@ -42,6 +42,9 @@
   margin-left: 189px;
   margin-top: 13px;
 }
+.small-creen{
+    display: none;
+  } 
 
 @media (min-width: 376px) and (max-width: 768px) {
   .fav-div {
@@ -58,6 +61,9 @@
     /* width: 648px; */
     margin-left: 61px;
   }
+  .small-creen{
+    display: none;
+  } 
 }
 
 @media (max-width: 375px) {
@@ -75,4 +81,8 @@
     margin-left: 26px;
     
   }
+  .big-screen{
+    display: none;
+  }
+
 }
